src/main/java/com/example/ReservationAppBackEnd/error/ApplicationError.java
package com.example.ReservationAppBackEnd.error;

public enum ApplicationError {
    LOGIN_EXISTS,
    EMAIL_EXISTS
}